--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,6 +34,7 @@
           <% } %>
         </tbody>
       </table>
+      <a href="#"><h5>Shorten New URL</h5></a>
     </main>
     <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
