added header partial within folder, updated index and show

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -16,6 +16,7 @@
     <title>TinyApp</title>
   </head>
   <body>
+    <%- include('partials/_header') %>
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
@@ -34,7 +35,6 @@
           <% } %>
         </tbody>
       </table>
-      <a href="#"><h5>Shorten New URL</h5></a>
     </main>
     <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
