--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -11,17 +11,17 @@
   </head>
 
   <body>
+    <%- include('partials/_header') %>
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title"><b>TinyURL for: </b><%= longURL %></h5>
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
-    <div style="margin:1em"><a href="#"><h5>Shorten New URL</h5></a></div>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
