--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -24,6 +24,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
@@ -32,6 +33,20 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td>
+                <form method="GET" action="/urls/<%= id %>/">
+                  <button type="submit" style=
+                  "background-color: white; 
+                  color: black; 
+                  border-color: black; 
+                  border-radius: 3px; 
+                  padding: 5px 10px; 
+                  cursor: pointer;
+                  ">
+                  Edit
+                  </button>
+                </form>
+              </td>
               <td>
                 <form method="POST" action="/urls/<%= id %>/delete">
                   <button type="submit" style=
