--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,10 +13,23 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+      <div class="navbar-nav mr-auto">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+        <form class="form-inline" method="POST" action="/login">
+          <input class="form-control mr-sm-2" type="text" name="username" placeholder="Enter username" aria-label="Username">
+          <button type="submit" style=
+          "background-color: white; 
+          color: black;
+          border-color: black; 
+          border-radius: 3px; 
+          padding: 5px 10px; 
+          cursor: pointer;
+          ">
+          Login
+          </button>
+        </form>
     </div>
   </nav>
 </header>
