--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,7 +17,10 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-        <form class="form-inline" method="POST" action="/login">
+        <div class="navbar-text">
+          <span>Hello, <%= username %>!</span>
+        </div>
+        <form class="form-inline" method="POST" action="/login" style="padding-left: 15px;">
           <input class="form-control mr-sm-2" type="text" name="username" placeholder="Enter username" aria-label="Username">
           <button type="submit" style=
           "background-color: white; 
