--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,21 +18,40 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
         <div class="navbar-text">
-          <span>Hello, <%= username %>!</span>
+          <% if (username) { %>
+            <span>Hello, <%= username %>!</span>
+          <% } else { %>
+            <span>Please log in</span>
+          <% } %>
         </div>
-        <form class="form-inline" method="POST" action="/login" style="padding-left: 15px;">
-          <input class="form-control mr-sm-2" type="text" name="username" placeholder="Enter username" aria-label="Username">
-          <button type="submit" style=
-          "background-color: white; 
-          color: black;
-          border-color: black; 
-          border-radius: 3px; 
-          padding: 5px 10px; 
-          cursor: pointer;
-          ">
-          Login
-          </button>
-        </form>
+        <% if (!username) { %>
+          <form class="form-inline" method="POST" action="/login" style="padding-left: 15px;">
+            <input class="form-control mr-sm-2" type="text" name="username" placeholder="Enter username" aria-label="Username">
+            <button type="submit" style=
+            "background-color: white; 
+            color: black;
+            border-color: black; 
+            border-radius: 3px; 
+            padding: 5px 10px; 
+            cursor: pointer;
+            ">
+            Login
+            </button>
+          </form>
+        <% } else { %>
+          <form class="form-inline" method="POST" action="/logout" style="padding-left: 15px;">
+            <button type="submit" style=
+            "background-color: white; 
+            color: black;
+            border-color: black; 
+            border-radius: 3px; 
+            padding: 5px 10px; 
+            cursor: pointer;
+            ">
+            Logout
+            </button>
+          </form>
+        <% } %>
     </div>
   </nav>
 </header>
