--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,8 +20,8 @@
     <main style="margin: 1em;">
       <div class="form-group mb-2">
         <form method="POST" action="/register">
-          <input class="form-inline" type="email" name="email" placeholder="Enter email" style ="margin-bottom: 1em;"/>
-          <input class="form-inline" type="password" name="password" placeholder="Enter password" style="margin-bottom: 1em;"/>
+          <input class="form-inline" type="email" name="email" placeholder="Enter email" style ="margin-bottom: .5em;"/>
+          <input class="form-inline" type="password" name="password" placeholder="Enter password" style="margin-bottom: .5em;"/>
           <button type="submit" style=
           "background-color: white; 
           color: black;
