--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,13 +18,13 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
         <div class="navbar-text">
-          <% if (username) { %>
-            <span>Hello, <%= username %>!</span>
+          <% if (user) { %>
+            <span>Hello, <%= user.email %>!</span>
           <% } else { %>
             <span>Please log in</span>
           <% } %>
         </div>
-        <% if (!username) { %>
+        <% if (!user) { %>
           <form class="form-inline" method="POST" action="/login" style="padding-left: 15px;">
             <input class="form-control mr-sm-2" type="text" name="username" placeholder="Enter username" aria-label="Username">
             <button type="submit" style=
