added login page and get route, updated header with register/login buttons instead of username

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,9 +19,9 @@
     <%- include('partials/_header') %>
     <main style="margin: 1em;">
       <div class="form-group mb-2">
-        <form method="POST" action="/register">
-          <input class="form-inline" type="email" name="email" placeholder="Enter new email" style ="margin-bottom: .5em;" required/>
-          <input class="form-inline" type="password" name="password" placeholder="Enter new password" style="margin-bottom: .5em;" required/>
+        <form method="POST" action="/login">
+          <input class="form-inline" type="email" name="email" placeholder="Enter email" style ="margin-bottom: .5em;" required/>
+          <input class="form-inline" type="password" name="password" placeholder="Enter password" style="margin-bottom: .5em;" required/>
           <button type="submit" style=
           "background-color: white; 
           color: black;
@@ -30,15 +30,15 @@
           padding: 5px 10px; 
           cursor: pointer;
           ">
-          Register
+          Login
           </button>
         </form>
       </div>
     </main>
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
+    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"
     ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
