adjusted register and login buttons slightly

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -25,15 +25,7 @@
           <input class="form-inline" type="email" name="email" placeholder="Enter new email" style ="margin-bottom: .5em;" required/>
           <h6>Password</h6>
           <input class="form-inline" type="password" name="password" placeholder="Enter new password" style="margin-bottom: .5em;" required/>
-          <button type="submit" style=
-          "background-color: blue; 
-          color: white;
-          border-radius: 3px; 
-          padding: 5px 10px; 
-          cursor: pointer;
-          ">
-          Register
-          </button>
+          <button type="submit" class="btn btn-primary">Register</button>
         </form>
       </div>
     </main>
