--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,15 +25,7 @@
           <input class="form-inline" type="email" name="email" placeholder="Enter email" style ="margin-bottom: .5em;" required/>
           <h6>Password</h6>
           <input class="form-inline" type="password" name="password" placeholder="Enter password" style="margin-bottom: .5em;" required/>
-          <button type="submit" style=
-          "background-color: blue; 
-          color: white; 
-          border-radius: 3px; 
-          padding: 5px 10px; 
-          cursor: pointer;
-          ">
-          Login
-          </button>
+          <button type="submit" class="btn btn-primary">Login</button>
         </form>
       </div>
     </main>
