refactored DELETE and PUT requests with method-override

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -48,7 +48,7 @@
                 </form>
               </td>
               <td>
-                <form method="POST" action="/urls/<%= id %>/delete">
+                <form action="/urls/<%= id %>?_method=DELETE" method="POST">
                   <button type="submit" style=
                   "background-color: white; 
                   color: red; 
