--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -19,7 +19,7 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
-        <form method="POST" action="/urls/<%= id %>">
+        <form action="/urls/<%= id %>?_method=PUT" method="POST">
           <input type="text" name="longURL" value="<%= longURL %>" placeholder="Update URL">
           <button type="submit" style=
           "background-color: white; 
